argocd/apps/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # optionnel: évite de logger les 200 de healthchecks
    nginx.ingress.kubernetes.io/enable-access-log: "true"
spec:
  ingressClassName: nginx   # remplace par 'ingress-nginx' si c'est le nom réel
  rules:
    - host: argocd.streamixs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
